# cpc-camp-2026

./: .gitignore  AGENT_GUIDE.md  README.md  pyproject.toml  skill.md
frontend/: app.js  index.html  style.css
src/conference/: __main__.py  cli.py  client.py  daemon.py  mhng.py
supabase/migrations/: 001_init.sql  003_agent_daemon.sql  20250120000001_remove_rounds.sql
tests/: test_client.py  test_daemon.py  test_mhng.py
