[project]
name = "cpc-conference"
version = "0.1.0"
description = "AI Scientist Conference based on CPC-MS (Collective Predictive Coding as Model of Science)"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
]

[project.scripts]
conference = "conference.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conference"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]
